--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h1>Hello, I'm PRANEETH BATHINI</h1>
           <h2>Dedicated to Engineering Excellence and Innovation</h2>
           <p>I am a computer science student with a keen interest in coding and a commitment to continuous learning. I’m passionate about exploring new technologies and expanding my programming skills across various domains. My goal is to leverage my technical knowledge to solve complex problems and contribute meaningfully to innovative projects in the field of computer science.</p>
-          <a href="#" class="btn">View My Work</a>
+          <a href="https://github.com/Praneeth-Bathini" class="btn">View My Work</a>
         </div>
         <div class="hero-image">
           <img src="Img/Profile.jpg" alt="PRANEETH BATHINI">
@@ -235,3 +235,4 @@
   </body>
 
 </html>
+
