--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="https://github.com/Praneeth-Bathini" class="btn">View My Work</a>
         </div>
         <div class="hero-image">
-          <img src="Img/Profile.jpg" alt="PRANEETH BATHINI">
+          <img src="Assets/Profile.jpg" alt="PRANEETH BATHINI">
         </div>
       </div>
     </section>
@@ -183,7 +183,7 @@
 
           <!-- Portfolio Item -->
           <div class="portfolio-box">
-            <img src="Img/credit-card-fraud-detection.png" alt="Credit Card Fraud Detection">
+            <img src="Assets/credit-card-fraud-detection.png" alt="Credit Card Fraud Detection">
             <div class="portfolio-content">
               <h3 class="project-title">Credit Card Fraud Detection</h3>
               <p>ML models (Logistic Regression, Decision Trees, Neural Networks) to detect fraudulent transactions.</p>
@@ -192,7 +192,7 @@
           </div>
 
           <div class="portfolio-box">
-            <img src="Img/age salary prediction.jpg" alt="Age & Salary Prediction">
+            <img src="Assets/age salary prediction.jpg" alt="Age & Salary Prediction">
             <div class="portfolio-content">
               <h3 class="project-title">Age & Salary Prediction</h3>
               <p>Predicts age and salary using Linear Regression, Decision Trees, and Neural Networks on relevant data.</p>
@@ -201,7 +201,7 @@
           </div>
 
           <div class="portfolio-box">
-            <img src="Img/Stock Price Prediction Using Twitter Dataset.jpg" alt="Stock Price Prediction">
+            <img src="Assets/Stock Price Prediction Using Twitter Dataset.jpg" alt="Stock Price Prediction">
             <div class="portfolio-content">
               <h3 class="project-title">Stock Price Prediction</h3>
               <p>Uses sentiment analysis from Twitter data combined with stock history to train ML models for predictions.</p>
@@ -210,7 +210,7 @@
           </div>
 
           <div class="portfolio-box">
-            <img src="Img/Helmet_Detection.png" alt="Helmet Detection">
+            <img src="Assets/Helmet_Detection.png" alt="Helmet Detection">
             <div class="portfolio-content">
               <h3 class="project-title">Helmet Detection (CNN)</h3>
               <p>Real-time helmet detection system using CNNs, TensorFlow, and OpenCV for traffic safety enforcement.</p>
@@ -219,7 +219,7 @@
           </div>
 
           <div class="portfolio-box">
-            <img src="Img/Language_Detection.png" alt="Language Detection">
+            <img src="Assets/Language_Detection.png" alt="Language Detection">
             <div class="portfolio-content">
               <h3 class="project-title">Language Detection</h3>
               <p>NLP-based ML model with TF-IDF, Naive Bayes, and Random Forest for multilingual text classification.</p>
@@ -228,7 +228,7 @@
           </div>
 
           <div class="portfolio-box">
-            <img src="Img/DDoS_Attacks.jpg" alt="DDoS Attack Classification">
+            <img src="Assets/DDoS_Attacks.jpg" alt="DDoS Attack Classification">
             <div class="portfolio-content">
               <h3 class="project-title">DDoS Attack Classification</h3>
               <p>ML system to detect and classify DDoS attacks using Random Forest and SVM for improved accuracy.</p>
@@ -281,7 +281,7 @@
             </li>
           </ul>
 
-          <a href="praneeth.pdf" target="_blank" class="btn">Download Resume</a>
+          <a href="Assets/praneeth.pdf" target="_blank" class="btn">Download Resume</a>
         </div>
       </div>
     </section>
@@ -400,3 +400,4 @@
     <script src="portfolio.js"></script>
   </body>
 </html>
+
