--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           </li>
           <li>
             <h4>Introduction to Cybersecurity</h4>
-            <p><em>Cisco Networking Academy</em> - June 21, 2023</p>
+            <p><em>Cisco Networking Academy</em> - August 2025</p>
           </li>
           <li>
             <h4>Python Programming Workshop</h4>
@@ -400,4 +400,5 @@
     <script src="portfolio.js"></script>
   </body>
 </html>
+
 
